# egui-vtk

./: .gitignore  CMakeLists.txt  README.md  SimpleRenderer.cpp  SimpleRenderer.h
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs  vtk_widget.rs
